# ortho-bender

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.local.json
.claude/AGENT_MEMORY/: MEMORY.md  README.md  active_session.md  active_task_motor_board.md  feedback_autonomy.md  handoff_to_jun_session.md  hardware_motor_driver_correction.md  hardware_setup.md  project_overview.md
.claude/agents/: cam-algorithm-engineer.md  motion-control-engineer.md  orthodontic-domain-expert.md
.claude/memory/: MEMORY.md
.claude/prompts/: system-prompt.md
.claude/rules/: coding-rules.md  project-rules.md
cmake/: arm-none-eabi.cmake
docs/: API_REFERENCE.md  ARCHITECTURE.md  BCODE_SPEC.md  CAD_CAM_GUIDE.md  DEPLOYMENT.md  HARDWARE_ABSTRACTION.md  MOCK_MODE.md  README.md  ROADMAP.md  SDK_GUIDE.md  TROUBLESHOOTING.md  WIRE_MATERIALS.md  bootflow.md  evk-camera-bringup.md  external-access.md  m7-freertos-experiments.md
docs/algorithm/: 01_CAD_CAM_GUIDE.md  02_BCODE_SPEC.md
docs/architecture/: 01_ARCHITECTURE.md  02_HARDWARE_ABSTRACTION.md  03_BOOTFLOW.md  04_PORTING.md  motor-control-architecture.md
docs/handover/: 00_QUICK_START_CARD.md  01_INITIAL_SETUP.md  02_SDK_DEVELOPER_GUIDE.md  03_TEST_APP_GUIDE.md  README.md
docs/hardware/: 01_EVK_CAMERA_BRINGUP.md  02_EVK_REMOTEPROC.md  04_TEST_BENCH_CONNECTION.md  05_BOOT_HANG_ANALYSIS.md  06_SERIAL_SHARED_MODE.md  adapter-board-spec.md  j21-pin-assignment.md
docs/project/: 01_ROADMAP.md
docs/research/: motor-control-benchmarking.md
docs/sdk/: 01_SDK_GUIDE.md  02_API_REFERENCE.md  (+3 more)
kas/: base.yml  ortho-bender-dev.yml  ortho-bender-prod.yml
src/app/: CMakeLists.txt
src/app/cam/: CMakeLists.txt  cam_engine.cpp  cam_engine.h
src/app/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/app/frontend/src/: App.tsx  constants.ts
src/app/frontend/src/api/: client.ts
src/app/frontend/src/components/: CameraView.tsx  MotorControl.tsx  RegisterInspector.tsx  StallGuardChart.tsx  SystemStatus.tsx
src/app/frontend/src/components/bending/: StepIndicator.tsx
src/app/frontend/src/components/charts/: Oscilloscope.tsx  OscilloscopeBuffer.ts  OscilloscopeControls.tsx
src/app/frontend/src/components/charts/__tests__/: OscilloscopeBuffer.test.ts
src/app/frontend/src/components/domain/: AxisStatusRow.tsx  ChannelLegend.tsx  KpiStrip.tsx
src/app/frontend/src/components/layout/: AlarmBanner.tsx  Header.tsx  Sidebar.tsx
src/app/frontend/src/components/shell/: AlarmBanner.tsx  Header.tsx  Sidebar.tsx
src/app/frontend/src/components/ui/: Button.tsx  Card.tsx  ConfirmModal.tsx  ConnectionControl.tsx  ConnectionIcon.tsx  EStopButton.tsx  EmptyState.tsx  MotionStatePill.tsx  SignalLed.tsx  SkeletonLoader.tsx  SliderInput.tsx  StatusBadge.tsx  ToastSystem.tsx
src/app/frontend/src/hooks/: useAxisCalibration.ts  useBoardRebootDetector.ts  useCameraWs.ts  useDiagWs.ts  useMotorWs.ts  usePersistentState.ts  usePsuConfig.ts  useSoftLimits.ts  useSystemWs.ts
src/app/frontend/src/lib/: domain-data.ts  format.ts
src/app/frontend/src/pages/: BendingPage.tsx  CameraPage.tsx  ConnectionPage.tsx  DashboardPage.tsx  DiagnosticsPage.tsx  DocumentationPage.tsx  MotorPage.tsx  SettingsPage.tsx  SimulationPage.tsx
src/app/frontend/src/styles/: globals.css  tokens.css
src/app/ipc/: CMakeLists.txt  rpmsg_client.cpp  rpmsg_client.h
src/app/sdk-examples/curl/: api_examples.sh
src/app/sdk-examples/python/: basic_bend.py  cad_cam_opencv_workflow.py  cam_from_curve.py  camera_stream.py  lifecycle_demo.py
src/app/sdk-examples/python/tests/: conftest.py  test_basic_bend.py  test_cad_cam_workflow.py  test_cam_from_curve.py  test_camera_lifecycle.py  test_camera_stream.py  test_curl_examples.py  test_lifecycle_demo.py  test_motor_lifecycle.py  test_opencv_inspection.py
src/app/server/: __init__.py  config.py  main.py  pytest.ini  requirements.txt
src/app/server/models/: camera_schemas.py  diag_schemas.py  schemas.py
src/app/server/routers/: bending.py  cam.py  camera.py  diag_router.py  docs.py  motor.py  system.py  wifi.py
src/app/server/services/: calibration_service.py  cam_service.py  camera_service.py  diag_service.py  ipc_client.py  motor_backend.py  motor_service.py  psu_service.py  spi_backend.py  tmc260c_driver.py  tmc5072_driver.py
src/app/server/services/camera_backends/: __init__.py  auto_backend.py  mock_backend.py  novitec_backend.py  vmbpy_backend.py
src/app/server/tests/: __init__.py  conftest.py  requirements-dev.txt  test_auto_camera_backend.py  test_bending.py  test_camera.py  test_camera_backend.py  test_camera_endpoints.py  test_config.py  test_health.py  test_ipc_mock.py  test_motor.py  test_system.py  test_websocket.py  test_wifi.py
src/app/server/ws/: manager.py
src/firmware/: CMakeLists.txt
src/firmware/board/: board.c  board.h  rsc_table.c
src/firmware/hal/: hal_gpio.h  hal_gpt.h  hal_spi.h
src/firmware/linker/: MIMX8ML8xxxxx_cm7_ram.ld
src/firmware/source/: FreeRTOSConfig.h  main.c
src/firmware/source/drivers/: motor_config.h  motor_hal.c  motor_hal.h  tmc260c.c  tmc260c.h  tmc5072.c  tmc5072.h  tmc5130.c  tmc5130.h  tmc5160.c  tmc5160.h  tmc_poll_task.c
src/firmware/source/ipc/: ipc_task.c  rpmsg_config.h
src/firmware/source/motion/: motion_controller.h  motion_task.c  pid_controller.h  step_gen.c  step_gen.h
src/firmware/source/safety/: estop.c  estop.h
tests/: CMakeLists.txt  test_cam_engine.cpp  test_diag_router.py  test_diag_service.py  test_motor_backend.py  test_tmc260c_driver.py  test_tmc5072_driver.py  test_wire_materials.cpp
tools/: board-snapshot-worker.py  board-snapshot.sh  evk-camera-test.sh  evk-csi2-ov5640-boot.py  fix-boot-delay.sh  launch-claude.sh  remote-deploy.sh  serial-boot-safe.py  setup-agent-memory.sh
tools/kc_port/: CMakeLists.txt  build-imx8mp.sh  kctestmain.cpp  motor_sim.cpp  platform.h  run_virtual_test.py  stub.cpp  stub.h  test_dashboard.py
tools/kc_port/cmake/: aarch64-linux-gnu.cmake
tools/kc_port/serial/: list_ports_linux.cpp  serial.cpp  serial.h  unix.cpp  unix.h
(+99 files in other folders)
